# nCurses-UI-Library

./: .gitignore  CMakeLists.txt
src/: UI.cpp  Window.cpp  Write.cpp  main.cpp
